Added style sheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Aaron Kvarnlov-Leverty's Resume</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Check it!</h1>
