Changed h1 tags to p tags.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Check it!</h1>
+        <p>Check it out!</p>
     </body>
 </html>
