--- a/index.html
+++ b/index.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Aaron Kvarnlov-Leverty's Resume</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
+<head>
+    <title>Aaron Kvarnlov-Leverty</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
     <body>
-        <p>Check it out!</p>
+        <div class="container">
+            <div class="row">
+                <h1>Aaron Kvarnlov-Leverty</h1>
+            </div>
+            <hr>
+            <div class="row">
+                <p translate="no" class="address-block">1153 Lafond Ave<br>
+                                                        St. Paul, MN 55104<br>
+                                                        (651) 210-0614<br>
+                                                        bozeman42@gmail.com</p>
+            </div>
+            
+            <div class="row section-title">
+                <h2>Experience</h2>
+            </div>
+            <div class="row company-title">
+                <h3>Whole Foods Market</h3>
+            </div>
+            <div class="row">
+                <div class="position-title">
+                    <h4>Metro Systems Integrator</h4>
+                    <p>March 2013 - Present</p>
+                </div>
+                <div class="sub-content">
+                    <p>Primary support for</p>
+                </div>
+            </div>
+            <div class="row">
+            <div class="position-title">
+                <h4>Store Scan Specialist</h4>
+                <p>August 2012 - February 2013</p>
+            </div>
+                <div class="sub-content">
+                    <ul>
+                        <li>Assure proper application of data batches to support
+                            smooth customer transactions</li>
+                        <li>Print and distribute shelf tags as appropriate</li>
+                        <li>Audit department shelf tags and scales for accuracy</li>
+                        <li>Assure that store technology is functioning properly</li>
+                        <li>Work with MSI to bring store systems into compliance with standards</li>
+                        <li>Communicate with MSI and regional to address in store data issues</li>
+                        <li>Work with front end and product teams to minimize open rings</li>
+                        <li>Assist Team Members with any store technology</li>
+                        <li>Maintain and upgrade systems as appropriate</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="position-title">
+                    <h4>Store Systems Integrator Backup</h4>
+                    <p>2008 - August 2012</p>
+                </div>
+                <div class="sub-content">
+                    <ul>
+                        <li>Receive and apply data batches from regional.</li>
+                        <li>Print shelf tags</li>
+                        <li>Audit shelf tags and department scales to ensure accuracy and compliance.</li>
+                        <li>Support and maintain store systems</li>
+                        <li>Assist Team Members with any technology</li>
+                    </ul>
+                </div>
+            </div>
+EDUCATION: University of Minnesota Morris 2000 - 2001
+* Courses: Calculus II, Multi-Variable Calculus, Modern Physics,
+Introduction to Computer Science
+COMPUTER SKILLS: * Access Via
+* RBX
+* Psion Handheld Units
+* System building
+* Managing home networking
+* MS Word, MS Excel
+* Can learn additional programs quickly.
+* Beginning programming in C++
+OTHER QUALITIES: * Very detailed-oriented.
+* Passionate about solving technical problems
+* Computer savvy and good with data entry.
+* Outgoing, enjoy working with and helping others.
+* Treat others with respect and kindness.
+* Passionately committed to the store and its core values.
+* Knowledgeable in store policy and procedures.
+WHOLE FOODS
+EXPERIENCE:
+        </div>
     </body>
 </html>
