--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Aaron Kvarnlov-Leverty</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -14,31 +14,46 @@
                 <h1>Aaron Kvarnlov-Leverty</h1>
             </div>
             <hr>
-            <div class="row">
-                <p translate="no" class="address-block">1153 Lafond Ave<br>
+
+                <div class="address-block">
+                                      <p translate="no">1153 Lafond Ave<br>
                                                         St. Paul, MN 55104<br>
                                                         (651) 210-0614<br>
                                                         bozeman42@gmail.com</p>
+                </div>
+
+            <div class="row">
+                <div class="section-title" id="firstSection">
+                    <h2>Experience</h2>
+                </div>
             </div>
-            
-            <div class="row section-title">
-                <h2>Experience</h2>
-            </div>
+            <hr>
             <div class="row company-title">
                 <h3>Whole Foods Market</h3>
             </div>
             <div class="row">
                 <div class="position-title">
-                    <h4>Metro Systems Integrator</h4>
+                    <h3>Metro Systems Integrator</h3>
                     <p>March 2013 - Present</p>
                 </div>
                 <div class="sub-content">
-                    <p>Primary support for</p>
+                    <ul>
+                        <li>Primary technical support for all Minnesota Whole Foods Market stores</li>
+                            <p>Two locations in 2013, expanding to seven locations currently</p>
+                        <li>Collaboration on Regional tech projects and system rollouts</li>
+                        <li>Systems supported:</li>
+                        <ul>
+                            <li>Windows workstations</li>
+                            <li>Department scales</li>
+                            <li>Hand held scanners used to place orders</li>
+                        </ul>
+                    </ul>
+                    <hr>
                 </div>
             </div>
             <div class="row">
             <div class="position-title">
-                <h4>Store Scan Specialist</h4>
+                <h3>Store Scan Specialist</h3>
                 <p>August 2012 - February 2013</p>
             </div>
                 <div class="sub-content">
@@ -54,11 +69,12 @@
                         <li>Assist Team Members with any store technology</li>
                         <li>Maintain and upgrade systems as appropriate</li>
                     </ul>
+                    <hr>
                 </div>
             </div>
             <div class="row">
                 <div class="position-title">
-                    <h4>Store Systems Integrator Backup</h4>
+                    <h3>Store Systems Integrator Backup</h3>
                     <p>2008 - August 2012</p>
                 </div>
                 <div class="sub-content">
@@ -69,9 +85,14 @@
                         <li>Support and maintain store systems</li>
                         <li>Assist Team Members with any technology</li>
                     </ul>
+                    <hr>
                 </div>
             </div>
-EDUCATION: University of Minnesota Morris 2000 - 2001
+            <div class="row section-title">
+                <h2>Education</h2>
+            </div>
+            
+ University of Minnesota Morris 2000 - 2001
 * Courses: Calculus II, Multi-Variable Calculus, Modern Physics,
 Introduction to Computer Science
 COMPUTER SKILLS: * Access Via
