--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Aaron Kvarnlov-Leverty</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Muli|Oswald" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -28,18 +28,18 @@
                 </div>
             </div>
             <hr>
-            <div class="row company-title">
+            <div class="row institution-title">
                 <h3>Whole Foods Market</h3>
             </div>
             <div class="row">
-                <div class="position-title">
+                <div class="section-item">
                     <h3>Metro Systems Integrator</h3>
                     <p>March 2013 - Present</p>
                 </div>
                 <div class="sub-content">
                     <ul>
-                        <li>Primary technical support for all Minnesota Whole Foods Market stores</li>
-                            <p>Two locations in 2013, expanding to seven locations currently</p>
+                        <li>Primary technical support for all Minnesota Whole Foods Market stores<br>
+                            Four locations in 2013, expanding to six that year, then to seven in 2017</li>
                         <li>Collaboration on Regional tech projects and system rollouts</li>
                         <li>Systems supported:</li>
                         <ul>
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="row">
-            <div class="position-title">
+            <div class="section-item">
                 <h3>Store Scan Specialist</h3>
                 <p>August 2012 - February 2013</p>
             </div>
@@ -73,28 +73,45 @@
                 </div>
             </div>
             <div class="row">
-                <div class="position-title">
+                <div class="section-item">
                     <h3>Store Systems Integrator Backup</h3>
                     <p>2008 - August 2012</p>
                 </div>
                 <div class="sub-content">
                     <ul>
-                        <li>Receive and apply data batches from regional.</li>
+                        <li>Apply</li>
                         <li>Print shelf tags</li>
                         <li>Audit shelf tags and department scales to ensure accuracy and compliance.</li>
                         <li>Support and maintain store systems</li>
                         <li>Assist Team Members with any technology</li>
                     </ul>
-                    <hr>
+
                 </div>
             </div>
-            <div class="row section-title">
-                <h2>Education</h2>
+            <div class="row">
+                <div class="section-title">
+                    <h2>Education</h2>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="section-item">
+                    <h3>University of Minnesota Morris</h3> 
+                    <p>2000 - 2001</p>
+                </div>
+                <div class="sub-content">
+                    <ul>
+                        <li>Courses</li>
+                        <ul>
+                            <li>Calculus II</li>
+                            <li>Multi-Variable Calculus</li>
+                            <li>Modern Physics</li>
+                            <li>Introduction to Computer Science</li>
+                        </ul>
+                    </ul>
+                </div>
             </div>
             
- University of Minnesota Morris 2000 - 2001
-* Courses: Calculus II, Multi-Variable Calculus, Modern Physics,
-Introduction to Computer Science
 COMPUTER SKILLS: * Access Via
 * RBX
 * Psion Handheld Units
