--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Aaron Kvarnlov-Leverty</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Muli|Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -40,13 +40,13 @@
                     <ul>
                         <li>Primary technical support for all Minnesota Whole Foods Market stores<br>
                             Four locations in 2013, expanding to six that year, then to seven in 2017</li>
+                        <li>On-call, secondary, and specialized support for all Midwest locations</li>
                         <li>Collaboration on Regional tech projects and system rollouts</li>
-                        <li>Systems supported:</li>
-                        <ul>
-                            <li>Windows workstations</li>
-                            <li>Department scales</li>
-                            <li>Hand held scanners used to place orders</li>
-                        </ul>
+                        <li>Develop and maintain knowledge base documentation</li>
+                        <li>Deveoped tools using Microsoft PowerShell with Active Directory</li>
+                        <li>On-site coordination of tech work for new store openings</li>
+                        <li>Coordinate support of vendor managed systems</li>
+                        <li>End user training</li>
                     </ul>
                     <hr>
                 </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="sub-content">
                     <ul>
-                        <li>Apply</li>
+                        <li>Apply price change data to store point of sale system</li>
                         <li>Print shelf tags</li>
                         <li>Audit shelf tags and department scales to ensure accuracy and compliance.</li>
                         <li>Support and maintain store systems</li>
@@ -101,13 +101,14 @@
                 </div>
                 <div class="sub-content">
                     <ul>
-                        <li>Courses</li>
-                        <ul>
-                            <li>Calculus II</li>
-                            <li>Multi-Variable Calculus</li>
-                            <li>Modern Physics</li>
-                            <li>Introduction to Computer Science</li>
-                        </ul>
+                        <li>Courses
+                            <ul>
+                                <li>Calculus II</li>
+                                <li>Multi-Variable Calculus</li>
+                                <li>Modern Physics</li>
+                                <li>Introduction to Computer Science</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
