--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <hr>
 
                 <div class="address-block">
-                  <p translate="no">1153&nbsp;Lafond&nbsp;Ave
-                                    St.&nbsp;Paul,&nbsp;MN&nbsp;55104
-                                    (651)&nbsp;210&#8209;0614
+                  <p translate="no">1153&nbsp;Lafond&nbsp;Ave<br>
+                                    St.&nbsp;Paul,&nbsp;MN&nbsp;55104<br>
+                                    (651)&nbsp;210&#8209;0614<br>
                                     bozeman42@gmail.com</p>
                 </div>
             
