--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 </div>
                 <div class="sub-content">
                     <ul>
-                        <li>Primary technical support for all Minnesota Whole Foods Market stores<br>
+                        <li>Primary technical support for all Minnesota Whole Foods Market stores:<br>
                             Four locations in 2013, expanding to six that year, then to seven in 2017</li>
+                        <li>Take ownership of and resolve support tickets.</li>
                         <li>On-call, secondary, and specialized support for all Midwest locations</li>
                         <li>Collaboration on Regional tech projects and system rollouts</li>
                         <li>Develop and maintain knowledge base documentation</li>
@@ -66,7 +67,7 @@
                         <li>Audit department shelf tags and scales for accuracy</li>
                         <li>Assure that store technology is functioning properly</li>
                         <li>Work with Metro Systems Integrator (MSI) to bring store systems into compliance with standards</li>
-                        <li>Communicate with MSI and regional to address in store data issues</li>
+                        <li>Communicate with MSI and regional data team to address in store data issues</li>
                         <li>Work with front end and product teams to minimize open rings</li>
                         <li>Assist Team Members with any store technology</li>
                         <li>Maintain and upgrade systems as appropriate</li>
