--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Aaron Kvarnlov-Leverty</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script src="https://use.fontawesome.com/12af582de8.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -114,6 +115,23 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        <div>
+          <a href="https://www.freecodecamp.com/bozeman42" target="_blank">
+            <span class="fa fa-fw fa-free-code-camp social" id="fcc-icon" aria-hidden="true"></span>
+            <span class="sr-only">Free Code Camp profile
+            </span>
+          </a>
+          <a href="https://github.com/bozeman42" target="_blank">
+            <span class="fa fa-fw fa-github social" id="github-icon" aria-hidden="true"></span>
+            <span class="sr-only">Github profile
+            </span>
+          </a>
+          <a href="https://www.linkedin.com/in/aaron-kvarnlov-leverty-71a1207a/" target="_blank">
+            <span class="fa fa-fw fa-linkedin social" id="linkedin-icon" aria-hidden="true"></span>
+            <span class="sr-only">Linkedin profile
+             </span>
+          </a>
             </div>
         </div>
     </body>
