--- a/index.html
+++ b/index.html
@@ -116,22 +116,24 @@
                     </ul>
                 </div>
             </div>
-        <div>
-          <a href="https://www.freecodecamp.com/bozeman42" target="_blank">
-            <span class="fa fa-fw fa-free-code-camp social" id="fcc-icon" aria-hidden="true"></span>
-            <span class="sr-only">Free Code Camp profile
-            </span>
-          </a>
-          <a href="https://github.com/bozeman42" target="_blank">
-            <span class="fa fa-fw fa-github social" id="github-icon" aria-hidden="true"></span>
-            <span class="sr-only">Github profile
-            </span>
-          </a>
-          <a href="https://www.linkedin.com/in/aaron-kvarnlov-leverty-71a1207a/" target="_blank">
-            <span class="fa fa-fw fa-linkedin social" id="linkedin-icon" aria-hidden="true"></span>
-            <span class="sr-only">Linkedin profile
-             </span>
-          </a>
+            <div class="footer">
+                <div>
+                  <a href="https://www.freecodecamp.com/bozeman42" target="_blank">
+                    <span class="fa fa-fw fa-free-code-camp social" id="fcc-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Free Code Camp profile
+                    </span>
+                  </a>
+                  <a href="https://github.com/bozeman42" target="_blank">
+                    <span class="fa fa-fw fa-github social" id="github-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Github profile
+                    </span>
+                  </a>
+                  <a href="https://www.linkedin.com/in/aaron-kvarnlov-leverty-71a1207a/" target="_blank">
+                    <span class="fa fa-fw fa-linkedin social" id="linkedin-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Linkedin profile
+                     </span>
+                  </a>
+                </div>
             </div>
         </div>
     </body>
