added additional information to resume
Added freecodecamp work and Brass Dog Games involvement.

--- a/primechallenge.html
+++ b/primechallenge.html
@@ -116,6 +116,42 @@
                     </ul>
                 </div>
             </div>
+            <div class="row">
+                <div class="section-title">
+                    <h2>Additional information</h2>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="section-item">
+                    <h3>Free Code Camp</h3>
+                    <p>2016 - Present</p>
+                </div>
+                <div class="sub-content">
+                    <ul>
+                        <li>Independent study</li>
+                        <ul>
+                            <li>Completed Basic Front End Development Projects</li>
+                            <li>Currently working through Intermediate Front End Development Projects</li>
+                            <li>Portfolio with links to completed work is here: <a href="https://codepen.io/bozeman42/full/ZBzqdx/" target="blank">Free Code Camp Portfolio</a></li>
+                        </ul>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="section-item">
+                    <h3>Brass Dog Games</h3>
+                </div>
+                <div class="sub-content">
+                    <ul>
+                        <li>Founding partner of local tabletop game company</li>
+                        <ul>
+                            <li>Participated in running two successful KickStarter campaigns</li>
+                            <li>Designed and built company web page: <a href="http://www.brassdoggames.com" target="blank">www.brassdoggames.com</a></li>
+                        </ul>
+                    </ul>
+                </div>
+            </div>
             <div class="footer">
                 <div>
                   <a href="https://www.freecodecamp.com/bozeman42" target="_blank">
